--- a/wally.toml
+++ b/wally.toml
@@ -1,8 +1,9 @@
 [package]
 name = "7kayoh/koute"
+description = "Koute. Powerful UI routing made simple. For Fusion@0.1.x only."
 author = ["7kayoh<git@7kayoh.net>"]
 license = "MIT"
-version = "0.1.0-beta"
+version = "0.1.1"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
