--- a/wally.toml
+++ b/wally.toml
@@ -1,5 +1,8 @@
 [package]
 name = "7kayoh/koute"
+description = "Koute. Routing in Fusion supercharged."
+license = "MIT"
+author = ["7kayoh<shigoto@7kayoh.net>"]
 version = "1.0.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
