--- a/wally.toml
+++ b/wally.toml
@@ -8,4 +8,4 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Fusion = "elttob/fusion~0.2.0"
+Fusion = "elttob/fusion@~0.2.0"
